fixed IZ#165483:Inaccuracy tests: regression in Loki